# pygrad

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/pygrad/: __init__.py  math.py  nn.py  viz.py
tests/: test_math.py  test_nn.py
