[project]
name = "pygrad"
version = "0.1.0"
description = "A tiny educational reverse-mode autodiff engine in pure Python."
readme = "README.md"
authors = [
    { name = "Erdong Li", email = "1317183+erdongli@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
