[project]
name = "pygrad"
version = "0.1.0"
description = "A tiny educational reverse-mode autodiff engine in pure Python."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Erdong Li", email = "1317183+erdongli@users.noreply.github.com" }
]
requires-python = ">=3.14"
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "graphviz>=0.21",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=8.3.4",
    "ruff>=0.15.0",
    "ty>=0.0.16",
]
